WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305313
[WebXR] Viewports don't get an initial value until getViewport is called
https://bugs.webkit.org/show_bug.cgi?id=305313
Summary
[WebXR] Viewports don't get an initial value until getViewport is called
Sergio Villar Senin
Reported
2026-01-12 01:59:34 PST
The base layer viewports are not properly computed until getViewports() is called. This seems sensible from the JavaScript POV, however it might cause issues in the underlying platforms if a carefully crafted WebXR example is created. If getViewport() is not ever called the viewports won't get a proper value and thus the underlying platforms would get 0x0 sized viewports which in some cases might cause issues.
Attachments
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2026-01-12 04:09:59 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56443
EWS
Comment 2
2026-01-14 00:28:27 PST
Committed
305565@main
(8de7eac55bb0): <
https://commits.webkit.org/305565@main
> Reviewed commits have been landed. Closing PR #56443 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-01-14 00:29:12 PST
<
rdar://problem/168125694
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug